--- a/src/SGDS_Web/SGDS_Web.csproj
+++ b/src/SGDS_Web/SGDS_Web.csproj
@@ -26,4 +26,6 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties wwwroot_4lib_4bootstrap_4dist_4css_4bootstrap-reboot_1css_1map__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
