--- a/src/SGDS_Web/Dockerfile
+++ b/src/SGDS_Web/Dockerfile
@@ -27,4 +27,5 @@ RUN dotnet publish "./SGDS_Web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_URLS=http://+:8080
 ENTRYPOINT ["dotnet", "SGDS_Web.dll"]
