--- a/src/SGDS_Web/appsettings.json
+++ b/src/SGDS_Web/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5439;Database=sgdswebdb;Username=sgds;Password=sgds;",
-    "SGDSDbConctextConnection": "Server=(localdb)\\mssqllocaldb;Database=SGDS_Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SGDSDbConctextConnection": "Server=(localdb)\\mssqllocaldb;Database=SGDS_Web;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SGDSDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SGDS_Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
